new hold model, adding in html templates

--- a/src/app/holdList/holdList.component.html
+++ b/src/app/holdList/holdList.component.html
@@ -1,3 +1,9 @@
-<div ng-repeat= "hold in $ctrl.holds">
+<!-- <div ng-repeat= "hold in $ctrl.holds">
 <hold hold=hold><h5><em>hold</em> component goes here</h5></hold>
+</div> -->
+<div> Heres the holds:
+  <span *ngFor="let hold of holds">
+  {{hold.name}}
+  </span>
 </div>
+<hold></hold>
