set up name input and output with event emitter

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<h1>Hit the Hold</h1>
-<name-input></name-input>
+<h1>Hit the Hold {{player}}</h1>
+<name-input (nameEntered) = "onPlayerEntered($event)"></name-input>
 <countdown></countdown>
 <hold-list></hold-list>
 <score-list></score-list>
