pass seconds and ms to timer component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,4 @@
 <countdown [count]="count" ></countdown>
 <hold-list></hold-list>
 <score-list></score-list>
-<timer></timer>
+<timer [seconds]="seconds" [ms]="ms"></timer>
