--- a/src/app/scoreList/scoreList.component.html
+++ b/src/app/scoreList/scoreList.component.html
@@ -1,7 +1,2 @@
 <h3>Top Scores:</h3>
-<!-- <ol class="scoreList">
-Score List
-<div ng-repeat= "score in $ctrl.scores">
-<score score=score></score>
-</div>
-</ol> -->
+<score *ngFor="let score of scores" [score]="score"></score>
